--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=api-ouvidoria
+
+spring.datasource.url = jdbc:mysql://localhost:3306/exemplo_spring_boot_2
+spring.datasource.username=root
+spring.datasource.password=@1@senac2021
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
