--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=api-ouvidoria
 
-spring.datasource.url = jdbc:mysql://localhost:3306/exemplo_spring_boot_2
+spring.datasource.url = jdbc:mysql://localhost:3306/api-ouvidoria
 spring.datasource.username=root
 spring.datasource.password=@1@senac2021
 
