--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=api-ouvidoria
 
 spring.datasource.url = jdbc:mysql://localhost:3306/api-ouvidoria
 spring.datasource.username=root
-spring.datasource.password=@1@senac2021
+spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
